--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mernm4ster.github.io/stix",
   "name": "new-react-app",
   "version": "0.1.0",
   "private": true,
@@ -9,9 +10,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "js-aruco": "^0.1.0",
     "nosleep.js": "^0.12.0",
     "react": "^18.2.0",
-    "react-camera-pro": "^1.3.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
