--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nosleep.js": "^0.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "stats.js": "^0.17.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
